feat(server): add the retire command
